# momentum-scanner-py

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  run.sh  setup.sh
docs/: ACTIONABLE_IMPLEMENTATION.md  ARCHITECTURE.md  PROVIDERS.md  QUICKSTART.md  TELEGRAM_SETUP.md  UI_GUIDE.md
scanner/: __init__.py
scanner/config/: __init__.py  config.example.json  universes.py
scanner/core/: __init__.py  actionable.py  indicators.py  models.py  ranking.py  readiness.py  scanner.py  strategy.py  utils.py
scanner/core/data_providers/: __init__.py  alpaca.py  alphavantage.py  base.py  finnhub.py  twelvedata.py
scanner/deploy/: Dockerfile  docker-compose.yml
scanner/deploy/systemd/: INSTALL.md  scanner.service  scanner.timer
scanner/integrations/: __init__.py  export.py  telegram.py
scanner/modes/: __init__.py  cli.py  ui_app.py  worker.py
scripts/: .pre-commit-check.sh  run_ui.py  test_installation.py  verify-safety.sh
tests/: verify_integrity.py
